# finalproject_Gorshkov_M25-555

./: .gitignore  MAKEFILE  README.md  main.py  pyproject.toml
data/: portfolios.json  rates.json  users.json
valutatrade_hub/: logging_config.py
valutatrade_hub/cli/: interface.py
valutatrade_hub/core/: currencies.py  exceptions.py  models.py  usecases.py
