[tool.poetry]

name = "finalproject_Gorshkov_Sergey_M25-555"
version = "0.1.0"
description = ""
authors = ["Sergey Gorshkov <Dantistsjohn@mail.ru>"]
readme = "README.md"


[tool.poetry.group.dev.dependencies]
pytest = "7.4.0"
black = "23.9.1"
flake8 = "6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = ["venv", ".venv", "dist", "__pycache__", 'constants.py']

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = [] 